# pypas-cli

./: .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml  setup.py
src/pypas/: __init__.py  main.py  settings.py
src/pypas/lib/: auth.py  config.py  console.py  decorators.py  exercise.py  monads.py  network.py  sysutils.py  utils.py
