[project]
name = "pypas-cli"
version = "0.5.0"
description = "Python Practical Assignments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pathspec>=0.12.1",
    "prettyconf>=2.3.0",
    "pytest>=8.4.1",
    "pytest-dependency>=0.6.0",
    "requests>=2.32.4",
    "requests-toolbelt>=1.0.0",
    "rich>=14.1.0",
    "toml>=0.10.2",
    "typer>=0.16.0",
]
authors = [{ email = "sdelquin@gmail.com", name = "Sergio Delgado Quintero" }]
maintainers = [
    { name = "Sergio Delgado Quintero", email = "sdelquin@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://pypas.es"
repository = "https://github.com/sdelquin/pypas-cli"
issues = "https://github.com/sdelquin/pypas-cli/issues"

[project.scripts]
pypas = "pypas.main:app"

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = ["ipython>=8.37.0"]
